--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -61,6 +61,7 @@ abdm.client-secret=${ABDM_CLIENT_SECRET}
 abdm.environment=sandbox
 
 
+quarkus.jackson.default-property-inclusion=non_null
 
 
 # configure MP-RestClient
@@ -70,6 +71,7 @@ quarkus.rest-client."com.example.abdm.AbdmGatewayClient".url=${abdm.${abdm.envir
 quarkus.rest-client.abdm-session.url=https://dev.abdm.gov.in/api/hiecm/gateway/v3
 quarkus.rest-client.abdm-publickey.url=https://abhasbx.abdm.gov.in/abha/api/v3/profile
 quarkus.rest-client.abdm-otp.url= https://abhasbx.abdm.gov.in/abha/api/v3
+quarkus.rest-client.abdm-enrollment.url=https://abhasbx.abdm.gov.in/abha/api/v3
 
 
 quarkus.log.category."org.jboss.resteasy.reactive.client.logging".level=DEBUG
