--- a/pom.xml
+++ b/pom.xml
@@ -173,6 +173,12 @@
         <artifactId>quarkus-scheduler</artifactId>
     </dependency>
 
+    <!-- Micrometer for performance metrics -->
+    <dependency>
+        <groupId>io.quarkus</groupId>
+        <artifactId>quarkus-micrometer</artifactId>
+    </dependency>
+
 </dependencies>
 
 <build>
